# excalidraw

./: .env.development  .gitignore  README.md  package.json
excalidraw-app/collab/: Collab.tsx  Portal.tsx
excalidraw-app/data/: firebase.ts
web_socket/: Cargo.toml  index.html
web_socket/src/: main.rs
web_socket/src/model/: ESocket.rs  mod.rs
