[package]
name = "web_socket"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
bytes = { version = "1.10.1", features = ["serde"] }
futures-util = "0.3.31"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
